// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with buttonContent custom element 1`] = `
.emotion-2 {
  position: relative;
  height: 70px;
  width: 100%;
  max-width: 100%;
  border: 0;
  padding: 0 15px;
  cursor: pointer;
  background-color: #323232;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1.125rem;
  font-weight: 400;
}

.emotion-1 {
  top: 5px;
  left: 7px;
  color: white;
  text-transform: none;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: absolute;
  top: 5px;
  left: 7px;
  color: white;
  font-size: 1rem;
}

<button
  aria-expanded={true}
  aria-haspopup="dialog"
  className="emotion-2"
  onBlur={[Function]}
  onClick={[Function]}
  type="button"
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      field label
    </span>
    <div>
      BUTTON CONTENT
    </div>
  </div>
</button>
`;

exports[`Button renders correctly with defaults 1`] = `
.emotion-3 {
  position: relative;
  height: 70px;
  width: 100%;
  max-width: 100%;
  border: 0;
  padding: 0 15px;
  cursor: pointer;
  background-color: #323232;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1.125rem;
  font-weight: 400;
}

.emotion-2 {
  top: 5px;
  left: 7px;
  color: white;
  text-transform: none;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: absolute;
  top: 5px;
  left: 7px;
  color: white;
  font-size: 1rem;
}

.emotion-1 {
  color: #888888;
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

<button
  aria-expanded={false}
  aria-haspopup="dialog"
  className="emotion-3"
  onBlur={[Function]}
  onClick={[Function]}
  type="button"
>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-0"
    />
    <div
      className="emotion-1"
    />
  </div>
</button>
`;

exports[`Button renders correctly with props provided 1`] = `
.emotion-3 {
  position: relative;
  height: 70px;
  width: 100%;
  max-width: 100%;
  border: 0;
  padding: 0 15px;
  cursor: pointer;
  background-color: #323232;
  color: #fff;
  font-family: "Ciutadella",sans-serif;
  font-size: 1.125rem;
  font-weight: 400;
}

.emotion-2 {
  top: 5px;
  left: 7px;
  color: white;
  text-transform: none;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: absolute;
  top: 5px;
  left: 7px;
  color: white;
  font-size: 1rem;
}

.emotion-1 {
  color: #888888;
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

<button
  aria-expanded={true}
  aria-haspopup="dialog"
  className="emotion-3"
  onBlur={[Function]}
  onClick={[Function]}
  type="button"
>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-0"
    >
      field label
    </span>
    <div
      className="emotion-1"
    >
      placeholder
    </div>
  </div>
</button>
`;

exports[`ButtonContent renders correctly with defaults 1`] = `
.emotion-2 {
  max-width: 100%;
  min-width: 0;
}

.emotion-0 {
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
  line-height: 1;
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
</div>
`;

exports[`ButtonContent renders correctly with props provided 1`] = `
.emotion-2 {
  max-width: 100%;
  min-width: 0;
}

.emotion-0 {
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
  line-height: 1;
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
</div>
`;
